--- a/packaging/debian/install
+++ b/packaging/debian/install
@@ -1,2 +1,2 @@
 src/usr/share/initramfs-tools usr/share/
-src/expandfs-lib.sh usr/share/initramfs-tools/scripts/
+src/expandroot-lib.sh usr/share/initramfs-tools/scripts/
