--- a/packaging/debian/install
+++ b/packaging/debian/install
@@ -1,3 +1,4 @@
 src/usr/bin/google_disk_expand usr/bin/
 src/usr/share/initramfs-tools usr/share/
 src/expandroot-lib.sh usr/share/initramfs-tools/scripts/
+google-disk-expand.service lib/systemd/system/
